fixed quote section alignment

--- a/style.css
+++ b/style.css
@@ -169,35 +169,59 @@ ul{
 
 
 
-.quote{
+.quote-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
+
     height: 300px;
     background: #E5E7EB;
     color: #1F2937;
     font-size: 36px;
     flex-wrap: wrap;
     padding: 16px;
- 
+    flex-direction: column;
+   
+  
 
 }
 
-.quote p{
-    margin: 8px;
-    text-align: center;
-    
-}
-
-
-
-
-.author{
+.text-container{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    
+    justify-content: center;
+    height: 100%;
+    max-width: 550px;
+    margin: 0 auto;
+  
+
 }
+
+.quote{
+    display: flex;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+    max-width: 720px;
+
+
+}
+
+.quote-author{
+    display: flex;
+    font-weight: bold;
+    font-size: 16px;
+    margin-left: 256px;
+   
+    align-self: flex-end;
+    
+   
+}
+
+
+
+
+
+
+
 
 .modal-container{
     display: flex;
